# ASCII-ART-STUDIO-

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx  SettingsPanel.tsx  SplashScreen.tsx  Toast.tsx  errorParser.ts  figletFonts.ts  i18n.ts  mediaDevices.ts  themes.ts  useConfig.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icosn.xcf
src-tauri/src/: lib.rs  main.rs
