[package]
name = "asciiartstudio"
version = "0.1.0"
description = "It's ASCII ART STUDIO"
authors = ["you"]
edition = "2021"
license = "MIT"

[lib]
name = "asciiartstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"
tempfile = "3"
regex = "1" 
dirs = "5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7"
async-stream = "0.3"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_DirectShow",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
v4l = "0.14"
